--- a/index.css
+++ b/index.css
@@ -52,21 +52,11 @@ button{
     font-size: 40px;
 }
 
-@media (min-width:576px) and (max-width:767px){
+@media (max-width:992px){
     #calculator{
         position: absolute;
         border:10px solid brown;
-        height:800px;
-        width:100%;
-        background-color: black;
-    }
-}
-
-@media (min-width:768px) and (max-width:992px){
-    #calculator{
-        position: absolute;
-        border:10px solid brown;
-        height:800px;
+        height:650px;
         width:100%;
         background-color: black;
     }
