--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 body{
-    background-color: rgb(6, 6, 136);
+    background-color: #a40606;
+    background-image: linear-gradient(315deg, #a40606 0%, #d98324 74%);
+    min-height: 100vh;
 }
 
 #calculator{
